# MESA

./: .dockerignore  .env.example  .gitignore  .mutmut-cache  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARK_METHODOLOGY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_INTEGRATION.md  FINAL_MESA_MASTER_AUDIT.md  FIXES.md  FIX_REPORT.md  GO_LIVE_REPORT.md  Handoff.md  LICENSE  MANIFEST.in  MESA_MCP_E2E_REPORT.md  Makefile  POST_IMPLEMENTATION_AUDIT.md  README.md  README_MCP.md  REPORT.md  SECURITY.md  _temp_reproduce_config.yaml  bench_94b3758eafe3493d8afb9abf90fde918.sqlite  bench_ef072ef55be240b6b09e894b89a0fe9e.sqlite  canliya_alma.md  colab_sonuc.md  cold_path_trace.txt  conftest.py  coverage_report.txt  debug_test.py  demo.md  docker-compose.v4.yml  docker-compose.yml  dummy.txt  eval_results.json  (+43 more)
.agents/: AGENTS.md  mcp_config.example.json  rules.md
.audit/: BASELINE.md  BASELINE.md.orig  BLOCKERS.md  BUGS.md  CHANGELOG_AUDIT.md  COMMANDS.md  COMMAND_LOG.md  COMMAND_LOG.md.orig  CURRENT_PHASE.md  CURRENT_PHASE.md.orig  DATA_FLOWS.md  DECISIONS.md  DEFERRED.md  FINDINGS.md  FIX_PLAN.md  INVENTORY.md  LOGGING_REVIEW_2026-07-22.md  PHASE_0_STATIC_CONFIGURATION_REVIEW_2026-07-21.md  PLAN.md  PRODUCTION_READINESS.md  README.md  REPORT.md  STATUS.md  SYSTEM_MAP.md  TESTS.md  TEST_MATRIX.md
.audit/remediation/: FAST_RESULT.md  FINAL_FINDING_MATRIX.md  FINAL_TEST_MATRIX.md  RELEASE_GATE_MATRIX.md  SOURCE_DIFF_OWNERSHIP.md
.ci_storage_test/: ci_test_graph
.githooks/: pre-push
.github/workflows/: benchmark-quality.yml  ci.yml  external-release-gates.yml  python-app.yml
benchmark_plan/: 01_Project_Overview.md  02_System_Architecture.md  03_Engineering_Specification.md  04_Dataset_Specification.md  05_Benchmark_Specification.md  06_Implementation_Roadmap.md  07_Developer_Guide.md  08_API_Reference.md  09_Testing_and_Validation.md  10_Deployment_Guide.md  Destekleyici Klasör Yapıları (The Rest of the Architecture).md
benchmarks/: FINAL_MESA_WHITEPAPER.md  contradiction_barerag_results.json  contradiction_leaderboard_results.json  mesa_solo_run_dump.json  v0.2.0_results.md  v0.4.2_results.md  v0.5.1_contradiction_results.md
benchmarks/phase1_gatekeeper/: contradiction_runner.py  gatekeeper.py
benchmarks/phase2_ablation/: run_ablation.py
config/: settings.yaml
data/embeddings/: placeholder.txt
data/faiss_index/: placeholder.txt
data/processed/: placeholder.txt
data/raw/: ma_dataset.json  placeholder.txt
demo/: demo_server.py  index.html  script.js  style.css
docs/: RUNBOOK.md  api-reference.md  architecture-v4.md  ci-assurance.md  colab_kurulum_rehberi.md  installation.md  mesa-benchmark-çalıştırma.md  prometheus_alerts.yml  release.md
examples/: hello_mesa.py  legal_assistant.py
mesa-benchmark/: .env.example  .gitignore  Dockerfile  README.md  USAGE_GUIDE.md  config.yaml  config_beam.yaml  config_contradiction.yaml  config_letta.yaml  config_locomo.yaml  config_mem0.yaml  config_mini_mem0.yaml  config_mini_mesa.yaml  config_multi_hop.yaml  config_reranking.yaml  config_zep.yaml  generate_missing_report.py  report_8b38cec8-f392-4256-a55b-afc4eadf6bb5.md  requirements-lock.txt  requirements.txt
mesa_api/: __init__.py  router.py  schemas.py  v4_router.py
mesa_client/: __init__.py  client.py  langchain.py
mesa_evals/: __init__.py  __main__.py  dataset.py  evals.py  gatekeeper.py  generator.py  legal_audit.py  legal_generator.py  load_test.py  recall_harness.py  run_beam_eval.py  soak_test.py  sweep.py  v4_rrf_ablation.py
mesa_mcp/: __init__.py  adapter.py  configuration.py  errors.py  http_service.py  security.py  server.py  service.py
mesa_memory/: DEPRECATION_NOTICE.md  __init__.py  config.py  container_health.py  retriever.py  runtime_entrypoint.py  utils.py  worker_runtime.py
mesa_storage/: __init__.py  dao.py  kuzu_migration.py  kuzu_provider.py  kuzu_schema_migration.py  kuzu_setup.py  recovery.py  schema_contract.py  schemas.py  sqlite_engine.py  vector_engine.py
mesa_workers/: __init__.py  entity_consolidation_worker.py  ingestion_worker.py  maintenance.py  maintenance_pagerank.py  projection_worker.py  rem_cycle.py  supervision.py
mutants/: .gitignore  setup.cfg
notebooks/: MESA_Benchmark_Ollama.ipynb  MESA_Colab_Demo.ipynb  MESA_Full_Benchmark_Ollama.ipynb
scratch/: append_rebel_test.py  update_loop.py  update_loop_rebel.py
scripts/: append_dao.py  canary_smoke_test.py  check_mypy_override_ratchet.py  down_migrate.py  fix_dao.py  health_check.py  migrate_kuzu_schema.py  migrate_raw_logs_agent_id.py  migrate_to_kuzu.py  release_preflight.py  release_v0.4.1.sh  release_v0.4.2.sh  release_v0.5.1.sh  release_v0.5.2.sh  reproduce_benchmark.py  reproduce_deadlock.py  run_ablation.py  run_all_benchmarks.sh  run_demo_rag.py  run_investor_demo.py  run_server.py  test_deadlock.py  test_manual.sh  test_prometheus_alerts.py  test_rate_limiting.py  verify_deadlock_fix.py
storage/: dead_letter_queue.jsonl  kuzu_db  kuzu_db_test  rbac_policy.json
tests/: bench_async_io.py  conftest.py  test_adapter.py  test_adapter_factory.py  test_adapter_live.py  test_adapters.py  test_adaptive_router.py  test_api_key_store.py  test_api_logging_contract.py  test_api_router.py  test_api_schemas.py  test_async_client_auth_contract.py  test_async_lock_loop.py  test_async_storage.py  test_auth_configuration_contract.py  test_chaos.py  test_ci_coverage_contracts.py  test_confidence_revision.py  test_config.py  test_config_edge_cases.py  test_conflict_resolution.py  test_consolidation.py  test_crossencoder_reranking.py  test_dao.py  test_dao_coverage.py  test_dao_extended.py  test_deployment_assets.py  test_dispatch_completion_contract.py  test_domain_extraction.py  test_downstream_fence_reconciliation_contract.py  test_durable_dispatch_contract.py  test_durable_dlq_contract.py  test_embedding.py  test_entity_consolidation_worker.py  test_fault_tolerance.py  test_graph_analytics.py  test_graph_v2_identity.py  test_graph_v2_purge.py  test_ingestion_trace_path.py  test_ingestion_worker.py  (+70 more)
typing/: mypy-progressive-overrides.json
(+533 files in other folders)
