[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesa-memory"
version = "0.2.0"
description = "Enterprise-grade cognitive memory engine for autonomous AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MESA Core Team"},
]
keywords = ["ai", "memory", "agents", "knowledge-graph", "llm", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # Async & IO
    "aiosqlite>=0.22.0",
    "anyio>=4.0.0",
    "httpx>=0.28.0",
    # Web / API
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
    "prometheus_client>=0.20.0",
    # LLM Provider SDKs
    "anthropic>=0.100.0",
    "openai>=2.36.0",
    "ollama>=0.6.0",
    "groq>=0.9.0",
    # Pydantic / Settings
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    # Data & Storage
    "lancedb>=0.30.0",
    "pyarrow>=24.0.0",
    "networkx>=3.4.0",
    "rocksdict>=0.3.0",
    # Numerical / Scientific
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "scikit-learn>=1.7.0",
    # Observability & Resilience
    "tenacity>=9.0.0",
    "psutil>=7.0.0",
    "rich>=15.0.0",
    # Utilities
    "python-dotenv>=1.2.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.0",
    "uuid6>=2025.0.0",
    "uuid7>=0.1.0",
    # Serialisation / Schema
    "jsonschema>=4.26.0",
    # Anomaly detection
    "pyod>=3.3.0",
]

[project.optional-dependencies]
full = [
    # PyTorch (CPU — users should install CUDA variant manually if needed)
    "torch>=2.11.0",
    # Hugging Face / Transformers
    "transformers>=5.8.0",
    "tokenizers>=0.22.0",
    "safetensors>=0.7.0",
    "huggingface_hub>=1.14.0",
    "sentence-transformers>=3.0.0",
    # Structured generation
    "outlines>=1.2.0",
    # spaCy NLP pipeline
    "spacy>=3.8.0",
    # Numba / LLVM
    "numba>=0.65.0",
    "llvmlite>=0.47.0",
    # Visualisation
    "matplotlib>=3.10.0",
    "pillow>=12.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Yasou13/MESA"
Repository = "https://github.com/Yasou13/MESA"
Documentation = "https://github.com/Yasou13/MESA/tree/main/docs"
Changelog = "https://github.com/Yasou13/MESA/blob/main/CHANGELOG.md"
Issues = "https://github.com/Yasou13/MESA/issues"

[tool.setuptools.packages.find]
include = ["mesa_memory*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
